[package]
name = "chatuza_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

src = ["lib.rs", "wallet_lib.rs"]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4.31"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15"
features = "0.10.0"
serde = {version = "1.0.193", features = ["derive"]}
serde-reflection = "0.3.6"
serde_json = "1.0.108"
struct_iterable = "0.1.1"
rocket = "0.4.5"
base64 = "0.21.5"
solana-client = "1.17.14"
solana-sdk = "1.17.14"
spl-associated-token-account = "2.3.0"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates", "tera_templates"]
